src/base/static/scss/_buttons.scss
// Buttons - Selectors

.btn {
    display: inline-block;
    *display: inline;
    *zoom: 1;
    padding: 0.325em 0.625em;
    margin-bottom: 0;
    text-align: center;
    vertical-align: middle;
    cursor: pointer;
    color: $button-background-blue;
    text-decoration: none;
    text-transform: uppercase;
    background-color: $button-background-lightblue;
    box-shadow: (-0.25em) 0.25em 0 $opacity-very-low-black;
    font-weight: 600;
    border: 3px solid $opacity-lowest-black;
    border-radius: 3px;

    &:visited, &:link {
        display: inline-block;
        *display: inline;
        *zoom: 1;
        padding: 0.325em 0.625em;
        margin-bottom: 0;
        text-align: center;
        vertical-align: middle;
        cursor: pointer;
        color: $button-background-blue;
        text-decoration: none;
        text-transform: uppercase;
        background-color: $button-background-lightblue;
        box-shadow: (-0.25em) 0.25em 0 $opacity-very-low-black;
        font-weight: 600;
        border: 3px solid $opacity-lowest-black;
        border-radius: 3px;
    }

    &:hover {
        background-color: $button-background-hover-blue;
    }
}

.btn-primary {
    background-color: $hover-highlight-blue;
    color: $button-color-white;
    background-color: $button-primary-background-orange;

    &:visited, &:link {
        background-color: $hover-highlight-blue;
        color: $button-color-white;
        background-color: $button-primary-background-orange;
    }

    &:hover {
        background-color: $button-background-blue;
    }
}

.btn-secondary {
    background-color: #ccc;
    color: $button-background-blue;
    background: none;
    border: none;
    box-shadow: none;

    &:visited, &:link {
        background-color: #ccc;
        color: $button-background-blue;
        background: none;
        border: none;
        box-shadow: none;
    }

    &:hover {
        background-color: $button-background-blue;
        color: $button-color-white;
    }
}

.btn-disabled {
    background-color: #eee;
    color: #ccc;
    box-shadow: none;

    &:visited, &:link, &:hover {
        background-color: #eee;
        color: #ccc;
        box-shadow: none;
    }
}

.btn-block {
    clear: both;
    display: block;
    padding: 0.5em 0.75em;
    width: 100%;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;

    &:visited, &:link {
        clear: both;
        display: block;
        padding: 0.5em 0.75em;
        width: 100%;
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
    }
}

.btn-large {
    font-size: 1.25em;
    padding: 0.75em 1em 0.5em;
}

.btn-small {
    font-size: 0.75em;
}

// ################################
// DYNAMIC FORM - SELECTORS
// ################################

.big-btn {
    position: absolute;
    bottom: 0;
    left: 0;
    opacity: 0;

    + label {
        position: relative;
        float: left;
        line-height: 2.5em;
        text-indent: 3.25em;
        margin-top: 5px;
        cursor: pointer;
        -webkit-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
        color: $unselected-message-light-gray;
        border-radius: 4px;
        padding-right: 10px;
        border: 2px solid $unselected-highlight-light-gray;

        &:before {
            position: absolute;
            display: block;
            top: 0;
            bottom: 0;
            left: 0;
            content: "";
            width: 2.5em;
            background: $unselected-highlight-light-gray;
            border-radius: 1px 0 0 1px;
        }
    }

    &:hover:not(:checked) {
        + label {
            color: $unselected-highlight-medium-gray;

            &:before {
                content: $icon-check-mark;
                text-indent: 0.9em;
                color: $unselected-message-medium-gray;
            }
        }
    }

    &:checked {
        + label {
            color: $selected-message-dark-gray;
            font-weight: bold;
            border: 2px solid $selected-highlight-orange;

            &:before {
                content: $icon-check-mark;
                text-indent: 0.9em;
                color: white;
                background-color: $selected-highlight-orange;
            }
        }
    }
}

/* Place type category button styles */
#category-btns {
    margin-bottom: 20px;
}

.category-btn {
    display: none;
}

.category-btn-container {
    width: 100%;
    margin-bottom: 4px;
    border-collapse: separate;
    border-spacing: 0;
    
    img {
        width: 36px;
        padding-top: 4px;
        padding-left: 2px;
    }

    .category-icon {
        cursor: pointer;
        width: 40px;
        border-top: 2px solid transparent;
        border-bottom: 2px solid transparent;
        border-left: 2px solid transparent;
        border-top-left-radius: 4px;
        border-bottom-left-radius: 4px;
    }

    .category-label {
        cursor: pointer;
        padding-left: 10px;
        border-top: 2px solid transparent;
        border-bottom: 2px solid transparent;
        border-right: 2px solid transparent;
        border-top-right-radius: 4px;
        border-bottom-right-radius: 4px;
        text-transform: uppercase;
        font-size: 1.2em;
        opacity: 1;
    }

    &:hover {
        .category-icon {
            border-color: $selected-highlight-orange;
        }

        .category-label {
            background-color: $selected-highlight-orange;
            border-color: $selected-highlight-orange;
            color: white;
        }
    }
}

/* Selected category placeholder styles */
#selected-category, .category-btn-container-selected {
    .category-icon {
        border-color: $selected-highlight-orange;
    }

    .category-label {
        background-color: $selected-highlight-orange;
        border-color: $selected-highlight-orange;
        color: white;
    }
}

/* Other dynamic form styles */
.category-menu-hamburger {
    padding-left: 20px;
    &:before {
        font-family: FontAwesome;
        font-size: 2.2em;
        content: $icon-expansion-hamburger;
    }

    &:hover {
        color: $selected-highlight-orange;
        cursor: pointer;
    }
}

/* Story bar styles */
.btn-previous-story-nav {
    vertical-align: top;
    width: 10%;
    color: $button-background-red;
    cursor: pointer;
    &:before {
        font-size: 3.3em;
        content: $button-left-arrow;
    }

    &:hover {
        color: $button-background-hover-red;
    }
}
  
.btn-next-story-nav {
    vertical-align: top;
    width: 10%;
    color: $button-background-red;
    cursor: pointer;
    &:before {
        font-size: 3.3em;
        content: $button-right-arrow;
    }

    &:hover {
        color: $button-background-hover-red;
    }
}

.story-nav-disabled {
    visibility: hidden;
}

